Fix pagination on mobile

--- a/src/assets/scss/layouts/_log.scss
+++ b/src/assets/scss/layouts/_log.scss
@@ -526,5 +526,13 @@ html {
     li {
         display: inline-block;
         margin: 0 var(--spacing-third);
+
+        &.hideOnMobile {
+            display: none;
+
+            @include breakpoint('small') {
+                display: inline-block;
+            }
+        }
     }
 }
